Update Dockerfile to work + update github actions to work with dockerfile

--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -20,7 +20,7 @@
     "dev.groceries.lltm.local": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "groceries",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
@@ -29,7 +29,7 @@
     "Docker": {
       "commandName": "Docker",
       "launchBrowser": true,
-      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/weatherforecast",
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/groceries",
       "publishAllPorts": true,
       "useSSL": false
     }
