--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [self-hosted]
+        os: [ubuntu-latest]
 
     steps:
     - uses: actions/checkout@v2
@@ -36,6 +36,6 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         context: .
-        platforms: linux/arm
+        platforms: linux/arm,linuxamd64
         push: true
         tags: lltm/groceries-api:latest
