--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -36,6 +36,6 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         context: .
-        platforms: linux/arm,linuxamd64
+        platforms: linux/arm,linux/amd64
         push: true
         tags: lltm/groceries-api:latest
